feat(jsend-and-swagger-ui): use jsend for response, updated swagger UI, and fixed bug in logger (#119)
* feat(jsend-and-swagger-ui): use jsend for response, updated swagger ui, and fix bug of logger

* feat(jsend-and-swagger-ui): updated boilerplate, and used constants

* feat(jsend-and-swagger-ui-update): added test cases

* feat(jsend-and-swagger-ui-update): removed debug code
