# routes/main.go
@@ -1,11 +1,15 @@
 package routes
 
 import (
+	"fmt"
 	"sync"
 
-	"github.com/Improwised/golang-api/middleware"
+	"go.uber.org/zap"
 
+	"github.com/Improwised/golang-api/config"
+	"github.com/Improwised/golang-api/constants"
 	controller "github.com/Improwised/golang-api/controllers/api/v1"
+	"github.com/Improwised/golang-api/middlewares"
 	"github.com/doug-martin/goqu/v9"
 	"github.com/gofiber/fiber/v2"
 )
@@ -13,23 +17,33 @@ import (
 var mu sync.Mutex
 
 // Setup func
-func Setup(app *fiber.App, goqu *goqu.Database) error {
+func Setup(app *fiber.App, goqu *goqu.Database, logger *zap.Logger, config config.AppConfig) error {
 	mu.Lock()
 
+	app.Use(middlewares.LogHandler(logger))
+
 	app.Static("/assets/", "./assets")
+
 	app.Get("/docs", func(c *fiber.Ctx) error {
 		return c.Render("./assets/index.html", fiber.Map{})
 	})
-	router := app.Group("/api")
 
+	router := app.Group("/api")
 	v1 := router.Group("/v1")
 
-	err := setupAuthController(v1, goqu)
+	middlewares := middlewares.NewMiddleware(config, logger)
+
+	err := setupAuthController(v1, goqu, logger, config)
 	if err != nil {
 		return err
 	}
 
-	err = setupUserController(v1, goqu)
+	err = setupUserController(v1, goqu, logger, middlewares)
+	if err != nil {
+		return err
+	}
+
+	err = healthCheckController(v1, goqu, logger)
 	if err != nil {
 		return err
 	}
@@ -38,8 +52,8 @@ func Setup(app *fiber.App, goqu *goqu.Database) error {
 	return nil
 }
 
-func setupAuthController(v1 fiber.Router, goqu *goqu.Database) error {
-	authController, err := controller.NewAuthController(goqu)
+func setupAuthController(v1 fiber.Router, goqu *goqu.Database, logger *zap.Logger, config config.AppConfig) error {
+	authController, err := controller.NewAuthController(goqu, logger, config)
 	if err != nil {
 		return err
 	}
@@ -47,18 +61,27 @@ func setupAuthController(v1 fiber.Router, goqu *goqu.Database) error {
 	return nil
 }
 
-func setupUserController(v1 fiber.Router, goqu *goqu.Database) error {
-	userController, err := controller.NewUserController(goqu)
+func setupUserController(v1 fiber.Router, goqu *goqu.Database, logger *zap.Logger, middlewares middlewares.Middleware) error {
+	userController, err := controller.NewUserController(goqu, logger)
 	if err != nil {
 		return err
 	}
 
-	v1.Post("/users", userController.UserCreate)
+	userRouter := v1.Group("/users")
+	userRouter.Post("/", userController.CreateUser)
+	userRouter.Get(fmt.Sprintf("/:%s", constants.ParamUid), middlewares.Authenticated, userController.GetUser)
+	return nil
+}
 
-	userRouter := v1
+func healthCheckController(v1 fiber.Router, goqu *goqu.Database, logger *zap.Logger) error {
+	healthController, err := controller.NewHealthController(goqu, logger)
+	if err != nil {
+		return err
+	}
 
-	userRouter = middleware.TokenAuth(userRouter)
-
-	userRouter.Get("/users/:user_id", userController.UserGet)
+	healthRouter := v1.Group("/health")
+	healthRouter.Get("/overall", healthController.Overall)
+	healthRouter.Get("/self", healthController.Self)
+	healthRouter.Get("/db", healthController.Db)
 	return nil
 }
